--- a/public/styles.css
+++ b/public/styles.css
@@ -33,7 +33,7 @@
   footer p {
     color: #ccc;
   }
-  .note {
+  .calculation {
     background: #EFEFEF;
     border-radius: 7px;
     box-shadow: 0 2px 5px #ccc;
@@ -42,18 +42,18 @@
     margin: 16px;
     float: left;
   }
-  .note h1 {
+  .calculation h1 {
     font-size: 1.1em;
     margin-bottom: 6px;
   }
-  .note p {
+  .calculation p {
     font-size: 1.1em;
     margin-bottom: 10px;
     white-space: pre-wrap;
     word-wrap: break-word;
   }
   
-  .note button {
+  .calculation button {
     position: relative;
     float: right;
     margin-right: 10px;
@@ -65,7 +65,7 @@
     outline: none;
   }
   
-  form.create-note {
+  form.create-calculation {
     position: relative;
     width: 480px;
     margin: 30px auto 20px auto;
@@ -74,8 +74,8 @@
     border-radius: 7px;
     box-shadow: 0 1px 5px rgb(138, 137, 137);
   }
-  form.create-note input,
-  form.create-note textarea {
+  form.create-calculation input,
+  form.create-calculation textarea {
     width: 100%;
     border: none;
     padding: 4px;
@@ -84,7 +84,7 @@
     font-family: inherit;
     resize: none;
   }
-  form.create-note button {
+  form.create-calculation button {
     position: absolute;
     right: 18px;
     bottom: -18px;
