changed styling for calculation boxes

--- a/public/styles.css
+++ b/public/styles.css
@@ -33,7 +33,8 @@
   footer p {
     color: #ccc;
   }
-  .calculation {
+
+  .error {
     background: #EFEFEF;
     border-radius: 7px;
     box-shadow: 0 2px 5px #ccc;
@@ -42,21 +43,41 @@
     margin: 16px;
     float: left;
   }
-  .calculation h1 {
+  .error h1 {
     font-size: 1.1em;
     margin-bottom: 6px;
   }
-  .calculation p {
+  
+  .error button {
+    position: relative;
+    float: right;
+    margin-right: 10px;
+    color: #d72323;
+    border: none;
+    width: 36px;
+    height: 36px;
+    cursor: pointer;
+    outline: none;
+  }
+
+  .calculation {
+    background: #EFEFEF;
+    border-radius: 7px;
+    box-shadow: 0 2px 5px #ccc;
+    padding: 10px;
+    width: 150px;
+    margin: 16px;
+    float: left;
+  }
+  .calculation h1 {
     font-size: 1.1em;
-    margin-bottom: 10px;
-    white-space: pre-wrap;
-    word-wrap: break-word;
+    margin-bottom: 6px;
+    display: inline;
   }
   
   .calculation button {
     position: relative;
     float: right;
-    margin-right: 10px;
     color: #d72323;
     border: none;
     width: 36px;
